add trip functional